--- a/src/patternfly/components/HelperText/helper-text-item.hbs
+++ b/src/patternfly/components/HelperText/helper-text-item.hbs
@@ -1,6 +1,23 @@
-<{{#if helper-text--IsList}}li{{else}}div{{/if}} class="pf-c-helper-text__item{{#if helper-text-item--modifier}} {{helper-text-item--modifier}}{{/if}}"
+<{{#if helper-text--IsList}}li{{else}}div{{/if}} class="pf-c-helper-text__item
+  {{#if helper-text-item--IsIndeterminate}} pf-m-indeterminate{{/if}}
+  {{#if helper-text-item--IsWarning}} pf-m-warning{{/if}}
+  {{#if helper-text-item--IsError}} pf-m-error{{/if}}
+  {{#if helper-text-item--IsSuccess}} pf-m-success{{/if}}
+  {{#if helper-text-item--IsDynamic}} pf-m-dynamic{{/if}}
+  {{#if helper-text-item--state}} pf-m-{{helper-text-item--state}}{{/if}}
+  {{#if helper-text-item--modifier}} {{helper-text-item--modifier}}{{/if}}"
+  {{#if helper-text-item--id}}
+    id="{{helper-text-item--id}}"
+  {{/if}}
   {{#if helper-text-item--attribute}}
     {{{helper-text-item--attribute}}}
   {{/if}}>
-  {{>@partial-block}}
+  {{#if helper-text-item--HasIcon}}
+    {{> helper-text-item-icon}}
+  {{/if}}
+  {{#if helper-text--value}}
+    {{> helper-text-item-text}}
+  {{else if @partial-block}}
+    {{> @partial-block}}
+  {{/if}}
 </{{#if helper-text--IsList}}li{{else}}div{{/if}}>
