--- a/src/patternfly/components/HelperText/helper-text.hbs
+++ b/src/patternfly/components/HelperText/helper-text.hbs
@@ -1,9 +1,15 @@
-<{{#if helper-text--IsList}}ul{{else}}div{{/if}} class="pf-c-helper-text{{#if helper-text--modifier}} {{helper-text--modifier}}{{/if}}"
+<{{#if helper-text--IsList}}ul{{else}}div{{/if}} class="pf-c-helper-text
+  {{#if helper-text--IsHidden}} pf-m-hidden{{/if}}
+  {{#if helper-text--modifier}} {{helper-text--modifier}}{{/if}}"
   {{#if helper-text--IsList}}
     role="list"
   {{/if}}
   {{#if helper-text--attribute}}
     {{{helper-text--attribute}}}
   {{/if}}>
-  {{>@partial-block}}
+  {{#if helper-text--value}}
+    {{> helper-text-item}}
+  {{else if @partial-block}}
+    {{> @partial-block}}
+  {{/if}}
 </{{#if helper-text--IsList}}ul{{else}}div{{/if}}>
