--- a/src/patternfly/components/Wizard/wizard-title.hbs
+++ b/src/patternfly/components/Wizard/wizard-title.hbs
@@ -6,8 +6,7 @@
     {{#> wizard-title-text}}
       {{{wizard-title-text--value}}}
     {{/wizard-title-text}}
-  {{/if}}
-  {{#if @partial-block}}
+  {{else if @partial-block}}
     {{> @partial-block}}
   {{/if}}
 </div>
