chore(icons): moved svg styles into include

--- a/src/patternfly/base/_icons.scss
+++ b/src/patternfly/base/_icons.scss
@@ -1,9 +1,3 @@
 @import "fa-icons";
 @import "pf-icons";
-
-.pf-svg {
-  // Default icon size
-  width: 1em;
-  height: 1em;
-  vertical-align: -.125em;
-}
+@import "svg-icons";
