fix(form-control): updated readonly, disabled colors

--- a/src/patternfly/sass-utilities/themes/dark/scss-variables.scss
+++ b/src/patternfly/sass-utilities/themes/dark/scss-variables.scss
@@ -25,7 +25,7 @@ $pf-global--link--Color--hover: $pf-color-blue-200;
 $pf-global--link--Color--visited: $pf-color-purple-300;
 $pf-global--disabled-color--100: $pf-color-black-400; // disabled text on regular background color
 $pf-global--disabled-color--200: $pf-color-black-500; // disabled background color
-$pf-global--disabled-color--300: $pf-color-black-200; // disabled text on disabled background color
+$pf-global--disabled-color--300: $pf-color-black-200; // disabled text on disabled background color - except form elements
 
 // icons
 $pf-global--icon--Color--light: $pf-color-black-300;
