chore(sass): rename mixins

--- a/src/patternfly/base/themes/dark/_globals.scss
+++ b/src/patternfly/base/themes/dark/_globals.scss
@@ -1,4 +1,4 @@
-@mixin pf-_globals() {
+@mixin pf-theme-dark-globals() {
   // stylelint-disable property-no-unknown
   color-scheme: dark;
   // stylelint-enable
