--- a/src/patternfly/components/Select/select-chip-group-collapsed.hbs
+++ b/src/patternfly/components/Select/select-chip-group-collapsed.hbs
@@ -3,39 +3,53 @@
     {{#> chip-group-list chip-group-list--attribute='aria-label="Chip group list"'}}
       {{#> chip-group-list-item}}
         {{#> chip}}
-          {{#> chip-text chip-text--attribute=(concat 'id="' select--id '-chip_one"')}}
-            Arkansas
-          {{/chip-text}}
-          {{#> button button--modifier="pf-m-plain" button--attribute=(concat 'aria-labelledby="remove_' select--id '_chip_one ' select--id '-chip_one" aria-label="Remove" id="remove_' select--id '_chip_one"')}}
-            <i class="fas fa-times" aria-hidden="true"></i>
-          {{/button}}
+          {{#> chip-content}}
+            {{#> chip-text chip-text--attribute=(concat 'id="' select--id '-chip_one"')}}
+              Arkansas
+            {{/chip-text}}
+          {{/chip-content}}
+          {{#> chip-actions}}
+            {{#> button button--modifier="pf-m-plain" button--attribute=(concat 'aria-labelledby="remove_' select--id '_chip_one ' select--id '-chip_one" aria-label="Remove" id="remove_' select--id '_chip_one"')}}
+              <i class="fas fa-times" aria-hidden="true"></i>
+            {{/button}}
+          {{/chip-actions}}
         {{/chip}}
       {{/chip-group-list-item}}
       {{#> chip-group-list-item}}
         {{#> chip}}
-          {{#> chip-text chip-text--attribute=(concat 'id="' select--id '-chip_two"')}}
-            Massachusetts
-          {{/chip-text}}
-          {{#> button button--modifier="pf-m-plain" button--attribute=(concat 'aria-labelledby="remove_' select--id '_chip_two ' select--id '-chip_two" aria-label="Remove" id="remove_' select--id '_chip_two"')}}
-            <i class="fas fa-times" aria-hidden="true"></i>
-          {{/button}}
+          {{#> chip-content}}
+            {{#> chip-text chip-text--attribute=(concat 'id="' select--id '-chip_two"')}}
+              Massachusetts
+            {{/chip-text}}
+          {{/chip-content}}
+          {{#> chip-actions}}
+            {{#> button button--modifier="pf-m-plain" button--attribute=(concat 'aria-labelledby="remove_' select--id '_chip_two ' select--id '-chip_two" aria-label="Remove" id="remove_' select--id '_chip_two"')}}
+              <i class="fas fa-times" aria-hidden="true"></i>
+            {{/button}}
+          {{/chip-actions}}
         {{/chip}}
       {{/chip-group-list-item}}
       {{#> chip-group-list-item}}
         {{#> chip}}
-          {{#> chip-text chip-text--attribute=(concat 'id="' select--id '-chip_three"')}}
-            New Mexico
-          {{/chip-text}}
-          {{#> button button--modifier="pf-m-plain" button--attribute=(concat 'aria-labelledby="remove_' select--id '_chip_three ' select--id '-chip_three" aria-label="Remove" id="remove_' select--id '_chip_three"')}}
-            <i class="fas fa-times" aria-hidden="true"></i>
-          {{/button}}
+          {{#> chip-content}}
+            {{#> chip-text chip-text--attribute=(concat 'id="' select--id '-chip_three"')}}
+              New Mexico
+            {{/chip-text}}
+          {{/chip-content}}
+          {{#> chip-actions}}
+            {{#> button button--modifier="pf-m-plain" button--attribute=(concat 'aria-labelledby="remove_' select--id '_chip_three ' select--id '-chip_three" aria-label="Remove" id="remove_' select--id '_chip_three"')}}
+              <i class="fas fa-times" aria-hidden="true"></i>
+            {{/button}}
+          {{/chip-actions}}
         {{/chip}}
       {{/chip-group-list-item}}
       {{#> chip-group-list-item}}
         {{#> chip chip--type="button" chip--modifier="pf-m-overflow"}}
-          {{#> chip-text}}
-            2 more
-          {{/chip-text}}
+          {{#> chip-content}}
+            {{#> chip-text}}
+              2 more
+            {{/chip-text}}
+          {{/chip-content}}
         {{/chip}}
       {{/chip-group-list-item}}
     {{/chip-group-list}}
