--- a/src/patternfly/demos/Card/templates/card-demo--template-gallery.hbs
+++ b/src/patternfly/demos/Card/templates/card-demo--template-gallery.hbs
@@ -24,14 +24,13 @@
           {{/check}}
         {{/card-actions}}
       {{/card-header}}
-      {{#> card-title}}
-        <p id="{{card--id}}-check-label">Patternfly</p>
+      {{#> card-title card-title-text--value="PATTERNFLY" card-title-text--id=(concat card--id '-check-label')}}
         {{#> content}}
           <small>Provided by Red Hat</small>
         {{/content}}
       {{/card-title}}
       {{#> card-body}}
-          PatternFly is a community project that promotes design commonality and improves user experience.
+        PatternFly is a community project that promotes design commonality and improves user experience.
       {{/card-body}}
     {{/card}}
     {{#> card card--id="card-2" card--modifier="pf-m-selectable-raised pf-m-compact"}}
@@ -44,8 +43,7 @@
           {{/check}}
         {{/card-actions}}
       {{/card-header}}
-      {{#> card-title}}
-        <p id="{{card--id}}-check-label">ActiveMQ</p>
+      {{#> card-title card-title-text--value="ActiveMQ" card-title-text--id=(concat card--id '-check-label')}}
         {{#> content}}
           <small>Provided by Red Hat</small>
         {{/content}}
@@ -64,8 +62,7 @@
           {{/check}}
         {{/card-actions}}
       {{/card-header}}
-      {{#> card-title}}
-        <p id="{{card--id}}-check-label">Apache Spark</p>
+      {{#> card-title card-title-text--value="Apache Spark" card-title-text--id=(concat card--id '-check-label')}}
         {{#> content}}
           <small>Provided by Red Hat</small>
         {{/content}}
@@ -84,8 +81,7 @@
           {{/check}}
         {{/card-actions}}
       {{/card-header}}
-      {{#> card-title}}
-        <p id="{{card--id}}-check-label">Avro</p>
+      {{#> card-title card-title-text--value="Avro" card-title-text--id=(concat card--id '-check-label')}}
         {{#> content}}
           <small>Provided by Red Hat</small>
         {{/content}}
@@ -104,8 +100,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">Azure Services</p>
+    {{#> card-title card-title-text--value="Azure Services" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -115,7 +110,7 @@
     {{/card-body}}
     {{/card}}
     {{#> card card--id="card-6" card--modifier="pf-m-non-selectable-raised pf-m-compact"}}
-    {{#> card-header}}
+      {{#> card-header}}
         <img src="/assets/images/camel-saxon_200x150.png" width="60px" alt="Logo">
         {{#> card-actions}}
           {{> dropdown dropdown--id=(concat card--id "-dropdown-kebab") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
@@ -124,14 +119,13 @@
           {{/check}}
         {{/card-actions}}
       {{/card-header}}
-      {{#> card-title}}
-        <p id="{{card--id}}-check-label">Crypto</p>
+      {{#> card-title card-title-text--value="Crypto" card-title-text--id=(concat card--id '-check-label')}}
         {{#> content}}
           <small>Provided by Red Hat</small>
         {{/content}}
       {{/card-title}}
       {{#> card-body}}
-      For providing flexible endpoints to sign and verify exchanges using the Signature Service of the Java Cryptographic Extension.
+        For providing flexible endpoints to sign and verify exchanges using the Signature Service of the Java Cryptographic Extension.
       {{/card-body}}
     {{/card}}
     {{#> card card--id="card-7" card--modifier="pf-m-selectable-raised pf-m-compact"}}
@@ -144,8 +138,7 @@
           {{/check}}
         {{/card-actions}}
       {{/card-header}}
-      {{#> card-title}}
-        <p id="{{card--id}}-check-label">DropBox</p>
+      {{#> card-title card-title-text--value="DropBox" card-title-text--id=(concat card--id '-check-label')}}
         {{#> content}}
           <small>Provided by Red Hat</small>
         {{/content}}
@@ -164,8 +157,7 @@
           {{/check}}
         {{/card-actions}}
       {{/card-header}}
-      {{#> card-title}}
-        <p id="{{card--id}}-check-label">JBoss Data Grid</p>
+      {{#> card-title card-title-text--value="JBoss Data Grid" card-title-text--id=(concat card--id '-check-label')}}
         {{#> content}}
           <small>Provided by Red Hat</small>
         {{/content}}
@@ -184,8 +176,7 @@
           {{/check}}
         {{/card-actions}}
       {{/card-header}}
-      {{#> card-title}}
-        <p id="{{card--id}}-check-label">REST</p>
+      {{#> card-title card-title-text--value="REST" card-title-text--id=(concat card--id '-check-label')}}
         {{#> content}}
           <small>Provided by Red Hat</small>
         {{/content}}
@@ -205,8 +196,7 @@
           {{/check}}
         {{/card-actions}}
       {{/card-header}}
-      {{#> card-title}}
-        <p id="{{card--id}}-check-label">SWAGGER</p>
+      {{#> card-title card-title-text--value="SWAGGER" card-title-text--id=(concat card--id '-check-label')}}
         {{#> content}}
           <small>Provided by Red Hat</small>
         {{/content}}
