--- a/src/patternfly/demos/Card/templates/card-template-line-chart.hbs
+++ b/src/patternfly/demos/Card/templates/card-template-line-chart.hbs
@@ -15,9 +15,7 @@
     {{#> card card--id=(concat card--id '-group-1') card--modifier="pf-m-plain pf-m-expanded"}}
       {{#> card-header card-header--modifier="pf-m-toggle-right"}}
         {{> card-header-toggle}}
-        {{#> card-title card-title--attribute=(concat 'id="' card--id '-title"')}}
-          CPU 1
-        {{/card-title}}
+        {{> card-title card-title-text--value="CPU 1" card-title-text--id=(concat card--id '-title')}}
       {{/card-header}}
       {{#> card-expandable-content}}
         {{#> card-body}}
@@ -28,17 +26,13 @@
     {{#> card card--id=(concat card--id '-group-2') card--modifier="pf-m-plain"}}
       {{#> card-header card-header--modifier="pf-m-toggle-right"}}
         {{> card-header-toggle}}
-        {{#> card-title card-title--attribute=(concat 'id="' card--id '-title"')}}
-          Pod count
-        {{/card-title}}
+        {{> card-title card-title-text--value="Pod count" card-title-text--id=(concat card--id '-title')}}
       {{/card-header}}
     {{/card}}
     {{#> card card--id=(concat card--id '-group-3') card--modifier="pf-m-plain"}}
       {{#> card-header card-header--modifier="pf-m-toggle-right"}}
         {{> card-header-toggle}}
-        {{#> card-title card-title--attribute=(concat 'id="' card--id '-title"')}}
-          Memory
-        {{/card-title}}
+        {{> card-title card-title-text--value="Memory" card-title-text--id=(concat card--id '-title')}}
       {{/card-header}}
     {{/card}}
   {{/card}}
