--- a/src/patternfly/demos/PrimaryDetail/primary-detail-template-card-view.hbs
+++ b/src/patternfly/demos/PrimaryDetail/primary-detail-template-card-view.hbs
@@ -9,8 +9,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">Patternfly</p>
+    {{#> card-title card-title-text--value="Patternfly" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -29,8 +28,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">ActiveMQ</p>
+    {{#> card-title card-title-text--value="ActiveQ" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -49,8 +47,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">Apache Spark</p>
+    {{#> card-title card-title-text--value="Apache Spark" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -69,8 +66,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">Avro</p>
+    {{#> card-title card-title-text--value="Avro" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -89,8 +85,7 @@
       {{/check}}
     {{/card-actions}}
   {{/card-header}}
-  {{#> card-title}}
-    <p id="{{card--id}}-check-label">Azure Services</p>
+  {{#> card-title card-title-text--value="Azure Services" card-title-text--id=(concat card--id '-check-label')}}
     {{#> content}}
       <small>Provided by Red Hat</small>
     {{/content}}
@@ -109,8 +104,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">Crypto</p>
+    {{#> card-title card-title-text--value="Crypto" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -129,8 +123,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">Patternfly</p>
+    {{#> card-title card-title-text--value="Patternfly" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -149,8 +142,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">Patternfly</p>
+    {{#> card-title card-title-text--value="Patternfly" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -169,8 +161,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">Patternfly</p>
+    {{#> card-title card-title-text--value="Patternfly" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -189,8 +180,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title}}
-      <p id="{{card--id}}-check-label">Patternfly</p>
+    {{#> card-title card-title-text--value="Patternfly" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
