--- a/src/patternfly/components/Card/card-title.hbs
+++ b/src/patternfly/components/Card/card-title.hbs
@@ -2,9 +2,10 @@
   {{#if card-title--attribute}}
     {{{card-title--attribute}}}
   {{/if}}>
-  {{#if card-title-text--text}}
+  {{#if card-title-text--value}}
     {{> card-title-text}}
-  {{else if @partial-block}}
+  {{/if}}
+  {{#if @partial-block}}
     {{> @partial-block}}
   {{/if}}
 </div>
